--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                         <div class="row justify-content-center">
                             <button id="buyticket_btn" type="button" class="col-xs-6 col-md-3 m-1 pl-1 pr-1 btn btn-outline-white">
-                                Buy Ticket
+                                Get a Ticket
                             </button>
                             <button id="info_btn" type="button" class="col-xs-6 col-md-3 m-1 pl-1 pr-1 btn btn-outline-white">
                                 Information
@@ -213,17 +213,34 @@
 
       .countdown-block{
         text-align: center;
-        font-size:12px;
         color:white;
-        width:6vmax;
-
+        width:8vmax;
       }
 
       .label{
         color:white;
         display:block;
-        font-size:20px;
-      }
+    }
+
+    @media only screen and (min-width: 600px) {
+          body {
+            background-color: blue;
+          }
+
+          .countdown-block{
+            font-size:20px;
+          }
+    }
+
+    @media only screen and (min-width: 992px) {
+          body {
+            background-color: red;
+          }
+
+          .countdown-block{
+            font-size:26px;
+          }
+    }
 
       /*#date-countdown{
         display: flex;
