--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
        }
 
        .trebuchet{
-            font-family: "Trebuschet MS", Helvetica, sans-serif;
+            font-family: "Trebuchet MS", Helvetica, sans-serif;
        }
 
        #oywtitle{
