--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </div>
 
                         <div class="row justify-content-center">
-                            <button id="buyticket_btn" type="button" class="col-xs-6 col-md-3 m-1 pl-1 pr-1 btn btn-outline-white">
+                            <button id="buyticket_btn" type="button" class="col-xs-3 m-1 pl-1 pr-1 btn btn-outline-white">
                                 Get a Ticket
                             </button>
                             <!--
@@ -96,7 +96,7 @@
 
             <div class="container-fluid h-100" id="buytickets_pg">
 
-                <div id="buytickets_title" class="trebuchet text-center display-3">
+                <div id="buytickets_title" class="mt-3 trebuchet text-center display-3">
                         Get Your Ticket Now
                 </div>
 
@@ -226,6 +226,10 @@
         display:block;
     }
 
+    #buyticket_btn{
+        width:45vmax;
+    }
+
 
      @media only screen and (max-width: 576px) {
 
@@ -236,6 +240,10 @@
           .label{
             font-size:20px;
           }
+
+          #buyticket_btn{
+            width:45vmax;
+        }
     }
 
     @media only screen and (min-width: 576px) {
@@ -247,6 +255,10 @@
           .label{
             font-size:20px;
           }
+
+          #buyticket_btn{
+            width:25vmax;
+        }
     }
 
     @media only screen and (min-width: 992px) {
@@ -258,6 +270,10 @@
           .label{
             font-size: 26px;
           }
+
+          #buyticket_btn{
+            width:25vmax;
+        }
     }
 
       .container{
