--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <div class="container-fluid h-100" id="buytickets_pg">
 
-                <div id="buytickets_title" class="mt-3 trebuchet text-center display-3">
+                <div id="buytickets_title" class="pt-3 trebuchet text-center display-3">
                         Get Your Ticket Now
                 </div>
 
