--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container splash h-100">
                 <div class="row h-100 justify-content-center align-items-center">
                     <div class="text-center">
-                        <img id="oywlogo" class="mb-3" src="https://www.oneyoungworld.com/sites/oneyoungworld.com/files/logo_new_white_02.png">
+                        <img id="oywlogo" class="mb-3" src="oyw_logo.png">
 
                         <h2 class="trebuchet text-white" id="oywtitle"> One Young World Bath Caucus 2019
                         </h2>
@@ -208,7 +208,7 @@
         height: 100%;
     }
       .splash {
-        background-image:url(https://i.imgur.com/QX5kidC.png);
+        background-image:url(web_bg.png);
         background-repeat: no-repeat;
         background-size: cover;
         overflow: hidden;
