--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>One Young World Bath</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="shortcut icon" href="logo.ico" />
     </head>
@@ -77,7 +77,7 @@
 
                         <div class="row">
                             <div class="mx-auto text-left">
-                                <h2 class="mt-2 trebuchet" id="abouttitle">About the Event</h2>
+                                <h2 class="mt-4 trebuchet" id="abouttitle">About the Event</h2>
                             </div>
                         </div>
 
@@ -95,14 +95,24 @@
 
                                 <p>In the spirit of promoting access to all, <strong>attendance at the Caucus is free</strong> with a deposit of £10 which is refundable upon checking-in.</p>
 
-                                <p>In the spirit of promoting access to all, <strong>attendance at the Caucus is free</strong> with a deposit of £10 which is refundable upon checking-in.</p>
+                                <div class="pt-3 row">
+                                    <div class="col-xs-12 col-md-4">
+                                        <img class="img-fluid img-responsive d-none d-md-block" src="black_health_and_development.png">
+                                    </div>
+                                    <div class="col-xs-12 col-md-4">
+                                        <img class="img-fluid img-responsive d-none d-md-block" src="black_sustainability_and_environment.png">
+                                    </div>
+                                    <div class="col-xs-12 col-md-4">
+                                        <img class="img-fluid img-responsive d-none d-md-block" src="black_equality_and_inclusion.png">
+                                    </div>
+                                </div>
 
-                                <p>In the spirit of promoting access to all, <strong>attendance at the Caucus is free</strong> with a deposit of £10 which is refundable upon checking-in.</p>
-                                <p>In the spirit of promoting access to all, <strong>attendance at the Caucus is free</strong> with a deposit of £10 which is refundable upon checking-in.</p>
-                                <p>In the spirit of promoting access to all, <strong>attendance at the Caucus is free</strong> with a deposit of £10 which is refundable upon checking-in.</p>
+                                
                             </div>
+
                             <div class="col-sm-1">
                             </div>
+
                             <div class="col-sm-4 order-first order-sm-last mb-3">
                                 <div class="row no-gutters">
                                     <p class="neg-margin lead">Date and Time</p>
@@ -126,23 +136,35 @@
 
                         </div>
 
+                        <div class="pt-3 row">
+                            <div class="col-4">
+                                <img class="img-fluid img-responsive d-md-none" src="black_health_and_development.png">
+                            </div>
+                            <div class="col-4">
+                                <img class="img-fluid img-responsive d-md-none" src="black_sustainability_and_environment.png">
+                            </div>
+                            <div class="col-4">
+                                <img class="img-fluid img-responsive d-md-none" src="black_equality_and_inclusion.png">
+                            </div>
+                        </div>
+
                         <div class="row">
                             <div class="imgwrapper col-sm-12 col-md-6">
                                 <img class="img-fluid img-responsive" src="MaryPhoto.png"">
                             </div>
 
                             <div class="col-sm-12 col-md-6 d-flex flex-column">
-                                <div style="height:2.5vmax;">
+                                <div class="d-none d-sm-block" style="height:2.5vmax;">
 
                                 </div>
 
-                                <div class="">
+                                <div>
                                     <p class="trebuchet"><strong>Mary Akongo</strong></p>
                                 </div>
 
                                 <div class="text-justify">
-                                    <p>Mary Helda Akongo graduated from Makerere University in Kampala, Uganda, in 2017, after receiving her Bachelor’s degree in Information Technology. She is the founder of Roaring Doves; an online and offline peer support community for victims and survivors of gender-based violence (GBV) who come together to create awareness of GBV, share their stories and support each other. She is also the operations and programs manager for Zimba Women; a Ugandan organization that finds innovative technological solutions to create sustainable futures for African women.</p>
-                                    <p>Mary Helda is also currently the One Young World, Coordinating Ambassador for East Africa, in charge of managing and reporting on the Ambassador Community the fourteen East African countries.In 2017, Mary Helda was awarded the 25 under 25 award by the Internet Society for her exceptional work with Zimba Women, which is using the Internet to create a positive impact on the lives of women in Sub-Saharan Africa. She recently won the World Bank #Blog4Dev writing competition for penning a brilliant story on her experience as a victim of GBV and her work with Roaring Doves. Mary Helda believes that technology has the power to positively influence the social, political and economic development of women in Africa.</p>
+                                    <p>Mary Helda Akongo will be traveling from Kampala, Uganda specifically to speak at the One Young World Bath Caucus. She is the founder of <strong>Roaring Doves</strong>; an online and offline peer support community for victims and survivors of gender-based violence (GBV) who come together to create awareness of GBV, share their stories and support each other. She is also the operations and programs manager for <strong>Zimba Women</strong>; a Ugandan organization that finds innovative technological solutions to create sustainable futures for African women.</p>
+                                    <p>Mary Helda is also currently the One Young World, Coordinating Ambassador for East Africa, in charge of managing and reporting on the Ambassador Community the fourteen East African countries. In 2017, Mary Helda was awarded the <strong>25 under 25 award by the Internet Society</strong> for her exceptional work with Zimba Women, which is using the Internet to create a positive impact on the lives of women in Sub-Saharan Africa. She recently won the <strong> World Bank #Blog4Dev </strong> writing competition for penning a brilliant story on her experience as a victim of GBV and her work with Roaring Doves. Mary Helda believes that technology has the power to positively influence the social, political and economic development of women in Africa.</p>
                                 </div>
 
                             </div>
