--- a/index.html
+++ b/index.html
@@ -124,14 +124,16 @@
                                 <div class="row no-gutters pt-3">
                                     <p class="neg-margin lead">Location</p>
                                     <hr style="width:100%; display:block">
-                                    <p>Chancellor's Building<br>
-                                       University of Bath<br>
-                                       Claverton Down<br>
-                                       BA2 7AY<br>
-                                       <a href="https://goo.gl/maps/qSpxrJXuhsQ2">View on Google Maps</a>
-                                       <!--
-                                       <div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&amp;height=300&amp;hl=en&amp;q=Chancellor's%20Building%2C%20University%20of%20Bath%2C%20Claverton%20Down%2C%20Bath%2C%20BA2%207AY+(One%20Young%20World%20Bath)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.maps.ie/map-my-route/">Create route map</a></iframe></div><br/>
-                                       -->
+                                    <p>Chancellor's Building<br/>
+                                       University of Bath<br/>
+                                       Claverton Down<br/>
+                                       BA2 7AY<br/>
+                                       <!--<a href="https://goo.gl/maps/qSpxrJXuhsQ2">View on Google Maps</a>-->
+
+                                       <div style="width: 100%">
+                                       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2490.2507153701226!2d-2.3280126!3d51.38007!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487181bbc3547451%3A0x68f654cf3ec6a8fb!2sChancellors&#39;+Building!5e0!3m2!1sen!2suk!4v1551212187937" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                       </div></br>
+                                       
                                     </p>
 
                                 </div>
