--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                                 <p>This event is run by the University of Bath in partnership with One Young World, a global organisation that focuses on harnessing the power of young leaders, who demonstrate leadership ability and a commitment to effecting positive change.</p>
 
-                                <p>In the spirit of promoting access to all, <strong>attendance at the Caucus is free</strong> with a deposit of £10 which is refundable upon checking-in.</p>
+                                <p>In the spirit of promoting access to all, <strong>attendance at the Caucus is free with a deposit of £10 which is refundable upon checking-in.</strong></p>
 
                                 <div class="pt-3 row d-none d-md-inline-flex">
                                     <div class="col-xs-12 col-md-4">
@@ -157,7 +157,7 @@
 
                         <div class="text-center mt-4">
                             <h3 class="trebuchet"><strong>Keynote Speakers</strong></h3>
-                            <hr
+                            <hr>
                         </div>
 
                         <div class="row">
@@ -213,6 +213,17 @@
                             </div>
                         </div>
 
+                        <div class="text-center mt-4">
+                            <h3 class="trebuchet"><strong>Workshops</strong></h3>
+                            <hr>
+                        </div>
+
+                        <div class="text-justify">
+                            <p>
+                            These workshops will be based on the UN Sustainable Development Goals that are the themes of the One Young World Bath Caucus. The best ideas of each workshop will be funded for post-event ini
+                            </p>    
+                        </div>
+                        <
                         <div class="jumbotron watch-this-space">
                             <p>Session speakers and panelists to be announced.</p>
                             <p>Questions? Contact us at
@@ -220,6 +231,7 @@
                                 </a>
                             </p>
                         </div>
+                        
                 </div>
 
             </div>
