--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                                 <p>This event is run by the University of Bath in partnership with One Young World, a global organisation that focuses on harnessing the power of young leaders, who demonstrate leadership ability and a commitment to effecting positive change.</p>
 
-                                <p>In the spirit of promoting access to all, <strong>attendance at the Caucus is free with a deposit of £10 which is refundable upon checking-in.</strong></p>
+                                <p>In the spirit of promoting access to all, <strong>attendance at the Caucus is free with a deposit of 10 pounds which is refundable upon checking-in.</strong></p>
 
                                 <div class="pt-3 row d-none d-md-inline-flex">
                                     <div class="col-xs-12 col-md-4">
