--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="main.css">
         <link rel="shortcut icon" href="logo.ico" />
-        <meta property='og:title' content="One Young World Bath"/>
-        <meta property='og:image' content="thumbnail_resized.png"/>
-        <meta property='og:description' content="This exciting free event will consist of a series of international and domestic speaker talks, workshops, and networking opportunities."/>
-        <meta property='og:url' content="https://oneyoungworldbath.com"/>
+        <meta property="og:title" content="One Young World Bath"/>
+        <meta property="og:image" content="thumbnail_resized.png"/>
+        <meta property="og:description" content="This exciting free event will consist of a series of international and domestic speaker talks, workshops, and networking opportunities."/>
+        <meta property="og:url" content="https://oneyoungworldbath.com"/>
 
     </head>
 
@@ -145,6 +145,10 @@
 
                             </div>
 
+                        </div>
+
+                        <div class="style:none">
+                            <img class="img-fluid img-responsive d-md-none" src="thumbnail_resized.png">
                         </div>
 
                         <div class="row pt-3 pb-3">
