--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                         </div>
 
-                        <div class="style:none">
+                        <div style="visibility: hidden">
                             <img class="img-fluid img-responsive d-md-none" src="thumbnail_resized.png">
                         </div>
 
