--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     <hr>
 
                      <div class="text-center deposit_text">
-                        <p><strong>A refundable deposit of &#163;10 is required due to high demand - this will be refunded upon check-in at the event</strong></p>
+                        <p class="refund_text"><strong>A refundable deposit of &#163;10 is required due to high demand - this will be <u>refunded</u> upon check-in at the event</strong></p>
                     </div>
 
 
