--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h2 class="trebuchet text-white" id="oywtitle">
                     One Young World Bath Caucus 2019
                 </h2>
-
+			<!--
                 <div id="date-countdown" class="mb-3 mt-3 row justify-content-center">
 
                     <div class="countdown-block trebuchet lead col-xs-1 pl-2 pr-2 ml-2 mr-2">
@@ -62,12 +62,9 @@
                         secs
                     </div>
                 </div>
-
+			-->
                 <div class="row justify-content-center">
-                    <button id="buyticket_btn" type="button" class="col-xs-3 m-1 pl-1 pr-1 btn btn-outline-white">
-                        Get a Ticket
-                    </button>
-
+                    
                     <button id="info_btn" type="button" class="col-xs-3 m-1 pl-1 pr-1 btn btn-outline-white">
                         Information
                     </button>
@@ -92,15 +89,15 @@
 
             <div class="row" id="cont">
                 <div class="col-sm-7 text-justify">
-                    <p><strong>This exciting free event will consist of a series of international and domestic speaker talks, workshops, and networking opportunities.</strong></p>
+                    <p><strong>This exciting free event consisted of a series of international and domestic speaker talks, workshops, and networking opportunities.</strong></p>
 
-                    <p>The event will take place as a one day conference that will be held on the University of Bath campus, on the <strong>6th of April</strong>, with leading voices from business and society joining students and interested local attendees to share ideas and engage in discussions around the issues that we face both domestically and internationally.</p>
+                    <p>The event took place as a one day conference that was held on the University of Bath campus, on the <strong>6th of April</strong>, with leading voices from business and society joining students and interested local attendees to share ideas and engage in discussions around the issues that we face both domestically and internationally.</p>
 
-                    <p>The conference will be composed of a series of succinct speaker talks discussing issues aligned with the One Young World values and the UN Sustainable Development Goals.</p>
+                    <p>The conference was composed of a series of succinct speaker talks that discussed issues aligned with the One Young World values and the UN Sustainable Development Goals.</p>
 
-                    <p>This event is run by the University of Bath in partnership with One Young World, a global organisation that focuses on harnessing the power of young leaders, who demonstrate leadership ability and a commitment to effecting positive change.</p>
+                    <p>This event was run by the University of Bath in partnership with One Young World, a global organisation that focuses on harnessing the power of young leaders, who demonstrate leadership ability and a commitment to effecting positive change.</p>
 
-                    <p>In the spirit of promoting access to all, <strong>attendance at the Caucus is free with a deposit of &#163;10 which is refundable upon checking-in.</strong></p>
+                    <p>In the spirit of promoting access to all, <strong>attendance at the Caucus was free with a refundable deposit of &#163;10.</strong></p>
 
                     <div class="pt-3 row d-none d-md-inline-flex">
                         <div class="col-xs-12 col-md-4">
@@ -185,7 +182,7 @@
                     </div>
 
                     <div class="text-justify">
-                        <p>Mary Helda Akongo will be travelling from Kampala, Uganda specifically to speak at the One Young World Bath Caucus. She is the founder of <strong>Roaring Doves</strong>; an online and offline peer support community for victims and survivors of gender-based violence (GBV) who come together to create awareness of GBV, share their stories and support each other. She is also the operations and programs manager for <strong>Zimba Women</strong>; a Ugandan organisation that finds innovative technological solutions to create sustainable futures for African women.</p>
+                        <p>Mary Helda Akongo travelled from Kampala, Uganda specifically to speak at the One Young World Bath Caucus. She is the founder of <strong>Roaring Doves</strong>; an online and offline peer support community for victims and survivors of gender-based violence (GBV) who come together to create awareness of GBV, share their stories and support each other. She is also the operations and programs manager for <strong>Zimba Women</strong>; a Ugandan organisation that finds innovative technological solutions to create sustainable futures for African women.</p>
                         <p>Mary Helda is also currently the One Young World Coordinating Ambassador for East Africa, in charge of managing and reporting on the Ambassador Community of the fourteen East African countries. In 2017, Mary Helda was awarded the <strong>25 under 25 award by the Internet Society</strong> for her exceptional work with Zimba Women, which is using the Internet to create a positive impact on the lives of women in Sub-Saharan Africa. She recently won the <strong>World Bank #Blog4Dev </strong> writing competition for penning a brilliant story on her experience as a victim of GBV and her work with Roaring Doves. Mary Helda believes that technology has the power to positively influence the social, political and economic development of women in Africa.</p>
                     </div>
 
@@ -292,11 +289,11 @@
             -->
 
             <div class="jumbotron watch-this-space text-center mt-5">
-                <p>Session speakers and panelists to be announced.</p>
+                <p><strong>The One Young World Bath Caucus 2019 is now officially over. Stay tuned for information about next year's caucus!</strong></p>
                 <p>
                     Questions? Contact us at
-                    <a href="mailto:ticketing@oneyoungworldbath.com" target="_blank" rel="noopener noreferrer" data-auth="NotApplicable" style="color:#6097AB; text-decoration:underline;">
-                        ticketing@oneyoungworldbath.com
+                    <a href="mailto:admin@oneyoungworldbath.com" target="_blank" rel="noopener noreferrer" data-auth="NotApplicable" style="color:#6097AB; text-decoration:underline;">
+                        admin@oneyoungworldbath.com
                     </a>
                 </p>
             </div>
@@ -308,39 +305,7 @@
 
     <hr>
 
-
-    <div class="container-fluid" id="buytickets_pg">
-        <div class="container">
-
-            <div class="row">
-                <div class="mx-auto text-left">
-                    <h2 class="mt-4 trebuchet" id="buytickets_title"><strong>Get Your Ticket Now</strong></h2>
-
-                </div>
-            </div>
-
-            <hr>
-
-            <div class="text-center deposit_text">
-                <p class="refund_text"><strong>A refundable deposit of &#163;10 is required due to high demand - this will be <u>refunded</u> upon check-in at the event</strong></p>
-                <p class="refund_text">It is <strong>highly likely</strong> that tickets may become available due to an extra release, or attendees dropping out of the event.</p>
-                <p class="refund_text">We will get in contact with you to offer you a place at the One Young World Bath Caucus 2019 when one becomes available. There is a considerable chance this will happen, so keep Saturday 6th April available.</p>
-            </div>
-
-
-            <div class="align-items-center pt-1">
-                <iframe class="item" src="https://eventbrite.co.uk/tickets-external?eid=53584079424&ref=etckt" frameborder="0" width=100% height=800px vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
-            </div>
-
-        </div>
-
-        <hr>
-
-    </div>
-
-
-
-
+	
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
