--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
 			
 				<div>
 					<div class="imgwrapper col-sm-12 col-md-12 mb-5 text-center">
-						<img class="img-fluid img-responsive barchart" src="ugpg_bar.png">
+						<img class="img-fluid img-responsive barchart" src="ugpg_bar.PNG">
 					</div>
 				</div>
 				
 				<div class="imgwrapper col-sm-12 col-md-12 text-center mb-5">
-                    <img class="img-fluid img-responsive piechart" src="piechart.png">
+                    <img class="img-fluid img-responsive piechart" src="piechart.PNG">
                 </div>		
 			
 			</div>
