--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
 			
 			<div class="row mb-3 justify-content-center">	
 				<div class="imgwrapper col-sm-4 col-lg-2">
-                    <img class="img-fluid img-responsive" src="sdg13.jpg">
+                    <img class="img-fluid img-responsive" src="sdg13.png">
                 </div>
 				
 				<div class="imgwrapper col-sm-4 col-lg-2">
-                    <img class="img-fluid img-responsive" src="sdg14.jpg">
+                    <img class="img-fluid img-responsive" src="sdg14.png">
                 </div>
 				
 				<div class="imgwrapper col-sm-4 col-lg-2">
