--- a/index.html
+++ b/index.html
@@ -212,7 +212,11 @@
 					<li class="trebuchet">100% of survey respondents agreed or strongly agreed that they thought the <strong>event was well organised.</strong></li>
 				</ul>
 			
-				<hr>
+				<div class="text-center mt-4">
+					<hr>
+					<h3 class="trebuchet"><strong>Attendance Breakdown</strong></h3>
+					<hr>
+				</div>
 			
 				<div class="row">
 					<div class="imgwrapper col-12 col-md-6 mb-5 d-flex">
