--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
 				</div>
 			
 				<div class="row">
-					<div class="imgwrapper col-12 col-md-6 mb-5 d-flex">
+					<div class="imgwrapper col-12 mb-4 col-md-6 mb-md-2 d-flex">
 						<img class="img-fluid img-responsive justify-content-center align-self-center barchart" src="ugpg_bar.png">
 					</div>
 				
-					<div class="imgwrapper col-sm-12 col-md-6 d-flex mb-5">
+					<div class="imgwrapper col-sm-12 col-md-6 d-flex">
 						<img class="img-fluid img-responsive justify-content-center align-self-center piechart" src="piechart.png">
 					</div>
 				</div>
