--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 
 <head>
@@ -275,23 +275,15 @@
             </div>
 			
 			<!-- ###########	END of the SDG page		###########-->
-			
-			
-<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->	
-			
-			
-			<!-- ###########	START of the KEYNOTE SPEAKER page		###########-->
-			
-			
-			<!-- The title -->
+
+		<!-- The title -->
             <div class="text-center mt-4">
 				<hr>
-                <h3 class="trebuchet"><strong>Keynote Speakers</strong></h3>
+                <h3 class="trebuchet"><strong>Upcoming Events</strong></h3>
                 <hr>
             </div>
-			
-			
-			<!-- CHRIS HEMMINGS -->
+
+		<!-- CHRIS HEMMINGS -->
 			
 			<div class="row mt-5 mt-md-0">
 			
@@ -344,9 +336,23 @@
                     </div>
                 </div>
             </div>
+
 			
 			
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->	
 			
+			
+			<!-- ###########	START of the KEYNOTE SPEAKER page		###########-->
+			
+			
+			<!-- The title -->
+            <div class="text-center mt-4">
+				<hr>
+                <h3 class="trebuchet"><strong>Keynote Speakers</strong></h3>
+                <hr>
+            </div>
+			
+
 			<!-- MARY HELDA AKONGO -->
 			
             <div class="row mt-5 mt-md-0">
