--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 		</div>
 			
 
-		<div class="row justify-content-center mb-5">
+		<div class="row justify-content-center mb-5 mt-md-0 mt-5">
 			<a href="https://www.eventbrite.co.uk/e/chris-hemmings-tickets-80637148883" class="btn btn-info btn-lg" role="button">Get your <strong>free</strong> ticket now</a>
 		</div>
 		<hr>
