--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             </div>
 			
 			
-		<p>
+		<p class="text-justify">
 			This event on the <strong>5th of December 2019</strong> is organised by the <strong>Equality, Diversity & Inclusivity team</strong> who aim to build an inclusive environment while providing advice, support 
 			and guidance on equality and diversity-related issues and by <strong>One Young World Bath</strong> whose conference on the 7th of March 2020 will focus on finding solutions 
 			to reduce sexual violence as one of the key themes.
