--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 			to reduce sexual violence as one of the key themes.
 		</p>
 			
-		<div class="imgwrapper col-sm-12 col-md-12">
+		<div class=" imgsm">
 				<img class="img-fluid img-responsive mt-md-2 mb-md-5" src="hemmingsDS.jpg">
 		</div>
 			
