--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 			<!-- The title -->
             <div class="text-center mt-4">
 				<hr>
-                <h3 class="trebuchet"><strong>Keynote Speakers for One Young World Bath 2020</strong></h3>
+                <h3 class="trebuchet"><strong>Keynote Speakers</strong></h3>
                 <hr>
             </div>
 			
