--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <p class="neg-margin lead">Location</p>
                         <hr style="width:100%; display:block">
                         <p>
-                            Chancellor's Building<br/>
+                            Chancellors' Building<br/>
                             University of Bath<br/>
                             Claverton Down<br/>
                             BA2 7AY<br/>
