--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					</p>
 
                     <p>
-						The event takes place on the University of Bath campus, as a one day conference, on the <strong>7th of March</strong>. Leading voices from business and society join students 
+						The event takes place on the University of Bath campus, as a one day conference, on the <strong>7th of March</strong>. Leading voices from activists and society join students 
 					    and interested local attendees in order to share ideas and engage in discussions around the issues that we face both domestically and internationally.
 					</p>
 
@@ -133,7 +133,7 @@
 
                     <p>
 						This event is by the University of Bath in partnership with One Young World, a global organisation that focuses on harnessing the power of young leaders, who demonstrate 
-						leadership ability and a commitment to effecting positive change. This year in particular, we’re witnessing an inaugural partnership between the School of Sciences and the
+						leadership ability and a commitment to effecting positive change. This year in particular, we’re witnessing an inaugural partnership between the School of Sciences & the
 						School of Management. 
 					</p>
 					
