--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
                         <hr style="width:100%; display:block">
                         <p>
                             Saturday 7th of March 2020<br>
-                            <em>Time to be confirmed</em>
+			    9:30-17:00 <br>
+                            <em>Registration 9:30-10:00</em>
                         </p>
                     </div>
 					
