--- a/index.html
+++ b/index.html
@@ -215,8 +215,9 @@
 					<hr style="width:100%; display:block">
 						
 						<div class="row no-gutters justify-content-center">
-							<a href="https://www.eventbrite.com" class="col-4 fa fa-facebook"></a>
+							<a href="https://www.eventbrite.com" class="fas fa-calendar-alt"></a>
 						</div>
+						
 						<hr class="d-md-none" style="width:100%; display:block">
 					</br>		
                     </div>
